# TeaserParser

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: change-reviewer.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/auth/: dependencies.py  routes.py
backend/app/chat/: llm.py  mock.py  prompts.py  routes.py
backend/app/db/: connection.py  schema.sql  seed.py
backend/app/documents/: geocoder.py  parser.py  routes.py
backend/app/opportunities/: routes.py
backend/app/progress/: routes.py
backend/app/votes/: routes.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx
frontend/src/components/dashboard/: PowerBIDashboard.tsx
frontend/src/components/documents/: DocumentList.tsx  FileManager.tsx  UploadZone.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/map/: MapWrapper.tsx  OpportunityMap.tsx  OpportunityPopup.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useOpportunities.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
planning/: PLAN.md  REVIEW.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: package.json  playwright.config.ts
test/e2e/: auth.spec.ts  chat.spec.ts  helpers.ts  map.spec.ts  navigation.spec.ts  opportunities.spec.ts  upload.spec.ts
(+5 files in other folders)
