[project]
name = "teaserparser"
version = "0.1.0"
description = "BTP - Ban's TeaserParser backend"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.31.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "litellm>=1.67.0",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pwdlib[bcrypt]>=0.2.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]
